Fixed a N.popup related bugs on iOS.

--- a/css/natural.ui.css
+++ b/css/natural.ui.css
@@ -1440,14 +1440,12 @@ a.btn_mouseout__, input[type='button'].btn_mouseout__, button.btn_mouseout__ {
 
 /* N.docs */
 .docs__ {
-	overflow: hidden;
 }
 
 .docs__>.docs_tab_context__ {
 	position: relative;
 	height: 33px;
 	border-bottom: 1px solid #66BB6A;
-	font-family: "Malgun Gothic", "dotum", "Segoe UI", sans-serif;
 	z-index: 1;
 }
 
@@ -1488,7 +1486,7 @@ a.btn_mouseout__, input[type='button'].btn_mouseout__, button.btn_mouseout__ {
 }
 
 .docs__>.docs_tab_context__>.docs_tabs__>.docs_tab__ {
-	
+
 }
 
 .docs__>.docs_tab_context__>.docs_tabs__>.docs_tab__.inactive__ {
@@ -1558,10 +1556,6 @@ a.btn_mouseout__, input[type='button'].btn_mouseout__, button.btn_mouseout__ {
 	font-size: 10px;
 	font-weight: bolder;
 	text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
-}
-
-.docs__>.docs_tab_context__>ul.docs_tab_utils__>.docs_tab_list_item__ .docs_tab_list__ {
-	position: relative;
 }
 
 .docs__>.docs_tab_context__>ul.docs_tab_utils__>.docs_tab_list_item__ .docs_tab_list__ {
